--- a/training/first-ticket.html
+++ b/training/first-ticket.html
@@ -578,13 +578,15 @@ Verify that this is indeed the two tickets you want to merge. It is non-reversib
 </div>
 <div id="final-checklist" class="section level2" number="9.4">
 <h2><span class="header-section-number">9.4</span> Final Checklist</h2>
-<p>You can click on the assessment report on the website to for a general check. Fix anything you see there.</p>
+<p>You can click on the <code>assessment report</code> on the website to for a general check. Fix anything you see there.</p>
 <p>Send the link over slack for peer review by your fellow datateam members. Usually we look for the following (the list is not exhaustive):</p>
 <div id="special-datasets" class="section level3" number="9.4.1">
 <h3><span class="header-section-number">9.4.1</span> Special Datasets</h3>
-<p>Please refer to the dedicated pages for instructions to handle these cases:
-- <a href="https://nceas.github.io/datateam-training/reference/MOSAiC.html">MOSAiC</a>
-- <a href="https://nceas.github.io/datateam-training/reference/distributed-biological-observatory-dbo-submissions.html">DBO</a></p>
+<p>Please refer to the dedicated pages for instructions to handle these cases:</p>
+<ul>
+<li><a href="https://nceas.github.io/datateam-training/reference/MOSAiC.html">MOSAiC</a></li>
+<li><a href="https://nceas.github.io/datateam-training/reference/distributed-biological-observatory-dbo-submissions.html">DBO</a></li>
+</ul>
 </div>
 <div id="system-metadata" class="section level3" number="9.4.2">
 <h3><span class="header-section-number">9.4.2</span> System Metadata</h3>
