--- a/training/introduction-to-open-science.html
+++ b/training/introduction-to-open-science.html
@@ -151,15 +151,14 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="1.2" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#effective-data-management"><i class="fa fa-check"></i><b>1.2</b> Effective data management</a></li>
 <li class="chapter" data-level="1.3" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#using-dataone"><i class="fa fa-check"></i><b>1.3</b> Using DataONE</a></li>
 <li class="chapter" data-level="1.4" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#working-on-a-remote-server"><i class="fa fa-check"></i><b>1.4</b> Working on a remote server</a></li>
-<li class="chapter" data-level="1.5" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#cyberduck-instructions"><i class="fa fa-check"></i><b>1.5</b> Cyberduck instructions</a></li>
-<li class="chapter" data-level="1.6" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#a-note-on-paths"><i class="fa fa-check"></i><b>1.6</b> A note on paths</a></li>
-<li class="chapter" data-level="1.7" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#a-note-on-r"><i class="fa fa-check"></i><b>1.7</b> A note on R</a></li>
-<li class="chapter" data-level="1.8" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#a-note-on-effective-troubleshooting-in-r"><i class="fa fa-check"></i><b>1.8</b> A note on effective troubleshooting in R</a></li>
-<li class="chapter" data-level="1.9" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#a-note-on-exercises"><i class="fa fa-check"></i><b>1.9</b> A note on Exercises</a></li>
-<li class="chapter" data-level="1.10" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#exercise-1"><i class="fa fa-check"></i><b>1.10</b> Exercise 1</a>
+<li class="chapter" data-level="1.5" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#a-note-on-paths"><i class="fa fa-check"></i><b>1.5</b> A note on paths</a></li>
+<li class="chapter" data-level="1.6" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#a-note-on-r"><i class="fa fa-check"></i><b>1.6</b> A note on R</a></li>
+<li class="chapter" data-level="1.7" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#a-note-on-effective-troubleshooting-in-r"><i class="fa fa-check"></i><b>1.7</b> A note on effective troubleshooting in R</a></li>
+<li class="chapter" data-level="1.8" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#a-note-on-exercises"><i class="fa fa-check"></i><b>1.8</b> A note on Exercises</a></li>
+<li class="chapter" data-level="1.9" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#exercise-1"><i class="fa fa-check"></i><b>1.9</b> Exercise 1</a>
 <ul>
-<li class="chapter" data-level="1.10.1" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#part-1"><i class="fa fa-check"></i><b>1.10.1</b> Part 1</a></li>
-<li class="chapter" data-level="1.10.2" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#part-2"><i class="fa fa-check"></i><b>1.10.2</b> Part 2</a></li>
+<li class="chapter" data-level="1.9.1" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#part-1"><i class="fa fa-check"></i><b>1.9.1</b> Part 1</a></li>
+<li class="chapter" data-level="1.9.2" data-path="introduction-to-open-science.html"><a href="introduction-to-open-science.html#part-2"><i class="fa fa-check"></i><b>1.9.2</b> Part 2</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="creating-a-data-package.html"><a href="creating-a-data-package.html"><i class="fa fa-check"></i><b>2</b> Creating a data package</a>
@@ -306,17 +305,16 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <li class="chapter" data-level="9.4.1" data-path="first-ticket.html"><a href="first-ticket.html#special-datasets"><i class="fa fa-check"></i><b>9.4.1</b> Special Datasets</a></li>
 <li class="chapter" data-level="9.4.2" data-path="first-ticket.html"><a href="first-ticket.html#system-metadata"><i class="fa fa-check"></i><b>9.4.2</b> System Metadata</a></li>
 <li class="chapter" data-level="9.4.3" data-path="first-ticket.html"><a href="first-ticket.html#general-eml"><i class="fa fa-check"></i><b>9.4.3</b> General EML</a></li>
-<li class="chapter" data-level="9.4.4" data-path="first-ticket.html"><a href="first-ticket.html#title-1"><i class="fa fa-check"></i><b>9.4.4</b> Title</a></li>
-<li class="chapter" data-level="9.4.5" data-path="first-ticket.html"><a href="first-ticket.html#abstract-1"><i class="fa fa-check"></i><b>9.4.5</b> Abstract</a></li>
+<li class="chapter" data-level="9.4.4" data-path="first-ticket.html"><a href="first-ticket.html#title"><i class="fa fa-check"></i><b>9.4.4</b> Title</a></li>
+<li class="chapter" data-level="9.4.5" data-path="first-ticket.html"><a href="first-ticket.html#abstract"><i class="fa fa-check"></i><b>9.4.5</b> Abstract</a></li>
 <li class="chapter" data-level="9.4.6" data-path="first-ticket.html"><a href="first-ticket.html#datatable-otherentity-spatialvectors"><i class="fa fa-check"></i><b>9.4.6</b> DataTable / OtherEntity / SpatialVectors</a></li>
 <li class="chapter" data-level="9.4.7" data-path="first-ticket.html"><a href="first-ticket.html#people"><i class="fa fa-check"></i><b>9.4.7</b> People</a></li>
 <li class="chapter" data-level="9.4.8" data-path="first-ticket.html"><a href="first-ticket.html#geographic-region"><i class="fa fa-check"></i><b>9.4.8</b> Geographic region</a></li>
 <li class="chapter" data-level="9.4.9" data-path="first-ticket.html"><a href="first-ticket.html#project"><i class="fa fa-check"></i><b>9.4.9</b> Project</a></li>
-<li class="chapter" data-level="9.4.10" data-path="first-ticket.html"><a href="first-ticket.html#methods-1"><i class="fa fa-check"></i><b>9.4.10</b> Methods</a></li>
+<li class="chapter" data-level="9.4.10" data-path="first-ticket.html"><a href="first-ticket.html#methods"><i class="fa fa-check"></i><b>9.4.10</b> Methods</a></li>
 <li class="chapter" data-level="9.4.11" data-path="first-ticket.html"><a href="first-ticket.html#check-eml-version"><i class="fa fa-check"></i><b>9.4.11</b> Check EML Version</a></li>
 <li class="chapter" data-level="9.4.12" data-path="first-ticket.html"><a href="first-ticket.html#access"><i class="fa fa-check"></i><b>9.4.12</b> Access</a></li>
 <li class="chapter" data-level="9.4.13" data-path="first-ticket.html"><a href="first-ticket.html#sftp-files"><i class="fa fa-check"></i><b>9.4.13</b> SFTP Files</a></li>
-<li class="chapter" data-level="9.4.14" data-path="first-ticket.html"><a href="first-ticket.html#updated-datasets"><i class="fa fa-check"></i><b>9.4.14</b> Updated datasets</a></li>
 </ul></li>
 <li class="chapter" data-level="9.5" data-path="first-ticket.html"><a href="first-ticket.html#email-templates"><i class="fa fa-check"></i><b>9.5</b> Email templates</a>
 <ul>
@@ -383,35 +381,20 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 If you R session is frozen and unresponsive check out <a href="https://help.nceas.ucsb.edu/NCEAS/Computing/rstudio_server.html">the guide</a> on how to fix it.
 </p>
 </div>
-<p>To transfer files on and off of the server we often use a secure FTP (sFTP) client, Cyberduck. This will be used when researchers have many files to upload or size of the files are very large.</p>
 </div>
-<div id="cyberduck-instructions" class="section level2" number="1.5">
-<h2><span class="header-section-number">1.5</span> Cyberduck instructions</h2>
-<p>To use Cyberduck to transfer local files onto the Datateam server:</p>
-<ol style="list-style-type: decimal">
-<li>Open Cyberduck.</li>
-<li>Check that you have the latest version (Cyberduck -&gt; Check for Update…). If not, download and install the latest (you may need Dom, Jesse, or Jeanette to enter a password).</li>
-<li>Click “Open Connection”.</li>
-<li>From the drop-down, choose “SFTP (Secure File Transfer Protocol)”.</li>
-<li>Enter “datateam.nceas.ucsb.edu” for Server.</li>
-<li>Enter your username and password.</li>
-<li>Connect.</li>
-</ol>
-<p>From here, you can drag and drop files to and from the server.</p>
-</div>
-<div id="a-note-on-paths" class="section level2" number="1.6">
-<h2><span class="header-section-number">1.6</span> A note on paths</h2>
+<div id="a-note-on-paths" class="section level2" number="1.5">
+<h2><span class="header-section-number">1.5</span> A note on paths</h2>
 <p>On the servers, paths to files in your folder always start with <code>/home/yourusername/...</code>.</p>
 <p><strong>Note</strong> - if you are a more advanced user, you may use the method you prefer as long as it is evident where your file is from.</p>
 <p>When you write scripts, try to avoid writing relative paths (which rely on what you have set your working directory to) as much as possible. Instead, write out the entire path as shown above, so that if another data team member needs to run your script, it is not dependent on a working directory.</p>
 </div>
-<div id="a-note-on-r" class="section level2" number="1.7">
-<h2><span class="header-section-number">1.7</span> A note on R</h2>
+<div id="a-note-on-r" class="section level2" number="1.6">
+<h2><span class="header-section-number">1.6</span> A note on R</h2>
 <p>This training assumes basic knowledge of R and RStudio. If you want a quick R refresher, walk through Jenny Bryan’s excellent materials <a href="http://stat545.com/block002_hello-r-workspace-wd-project.html">here</a>.</p>
 <p>Throughout this training we will occasionally use the namespace syntax <code>package_name::function_name()</code> when writing a function. This syntax denotes which package a function came from. For example <code>dataone::getSystemMetadata</code> selects the <code>getSystemMetadata</code> function from the <code>dataone</code> R package. More detailed information on namespaces can be found <a href="http://r-pkgs.had.co.nz/namespace.html">here</a>.</p>
 </div>
-<div id="a-note-on-effective-troubleshooting-in-r" class="section level2" number="1.8">
-<h2><span class="header-section-number">1.8</span> A note on effective troubleshooting in R</h2>
+<div id="a-note-on-effective-troubleshooting-in-r" class="section level2" number="1.7">
+<h2><span class="header-section-number">1.7</span> A note on effective troubleshooting in R</h2>
 <p>We suggest using a combination of <strong>m</strong>inimal <strong>r</strong>eproducible <strong>e</strong>xamples (MRE) and the package <code>reprex</code> to create <strong>rep</strong>roducible <strong>ex</strong>amples. This will allow others to better help you if we can run the code on our own computers.</p>
 <p>A MRE is stripping down your code to only the parts that cause the bug.</p>
 <p>How to generate a reprex:</p>
@@ -446,24 +429,24 @@ doc_ex &lt;- list(packageId = &quot;id&quot;, system = &quot;system&quot;,
                            dataTable = list(entityName = &quot;data table&quot;, attributeList = att_list))
 )</code></pre>
 </div>
-<div id="a-note-on-exercises" class="section level2" number="1.9">
-<h2><span class="header-section-number">1.9</span> A note on Exercises</h2>
+<div id="a-note-on-exercises" class="section level2" number="1.8">
+<h2><span class="header-section-number">1.8</span> A note on Exercises</h2>
 <p>The rest of the training has a series of exercises. These are meant to take you through the process as someone submitting a dataset from scratch. This is slightly different than the usual workflow but important in understanding the underlying system behind the Arctic Data Center.</p>
 <p>Please note that you will be completing everything on the <a href = 'https://test.arcticdata.io' target='_blank'> site</a> for the training. In the future if you are unsure about doing anything with a dataset. The test site is a good place to try things out!</p>
 </div>
-<div id="exercise-1" class="section level2 exercise" number="1.10">
-<h2><span class="header-section-number">1.10</span> Exercise 1</h2>
+<div id="exercise-1" class="section level2 exercise" number="1.9">
+<h2><span class="header-section-number">1.9</span> Exercise 1</h2>
 <p>This part of the exercise walks you through submitting data through the web form on “<a href = 'https://test.arcticdata.io' target='_blank'>test.arcticdata.io</a>”</p>
-<div id="part-1" class="section level3" number="1.10.1">
-<h3><span class="header-section-number">1.10.1</span> Part 1</h3>
+<div id="part-1" class="section level3" number="1.9.1">
+<h3><span class="header-section-number">1.9.1</span> Part 1</h3>
 <ul>
 <li>Download the <a href="data/Loranty_2016_Environ._Res._Lett._11_095008.csv">csv</a> of Table 1 from <a href = 'http://iopscience.iop.org/article/10.1088/1748-9326/11/9/095008/meta' target='_blank'>this paper.</a></li>
 <li>Reformat the table to meet the guidelines outlined in the journal article on effective data management (this might be easier to do in an interactive environment like Excel).</li>
 <li>Note - we usually don’t edit the content in data submissions so don’t stress over this part too much</li>
 </ul>
 </div>
-<div id="part-2" class="section level3" number="1.10.2">
-<h3><span class="header-section-number">1.10.2</span> Part 2</h3>
+<div id="part-2" class="section level3" number="1.9.2">
+<h3><span class="header-section-number">1.9.2</span> Part 2</h3>
 <ul>
 <li>Go to “<a href = 'https://test.arcticdata.io/#data' target='_blank'>test.arcticdata.io</a>” and submit your reformatted file with appropriate metadata that you derive from the text of the paper:
 <ul>
