--- a/training/first-ticket.html
+++ b/training/first-ticket.html
@@ -471,6 +471,7 @@ Verify that this is indeed the two tickets you want to merge. It is non-reversib
 <p>Before responding to a new submission use this checklist to review the submission. When your are ready to respond use the <a href = 'https://nceas.github.io/datateam-training/reference/email-templates.html' target='_blank'>initial email template</a> and insert comments and modify as needed.</p>
 <div id="sensitive-data" class="section level4" number="9.2.0.1">
 <h4><span class="header-section-number">9.2.0.1</span> Sensitive Data</h4>
+<p>If any of the below is in the dataset, please alert the #arctica team know before proceeding.</p>
 <ul>
 <li>Check if there is any sensitive information or personal identifying information in the data (eg. Names)</li>
 <li>Can the data be disaggregated and de-anonymized? (eg. a small sample size and individuals could be easily identified by their answers)</li>
@@ -478,11 +479,10 @@ Verify that this is indeed the two tickets you want to merge. It is non-reversib
 </ul>
 <p>Common Cases:</p>
 <ul>
-<li><strong>Social Science:</strong> Any dataset involving human subjects (may include awards awarded by ASSP, topics such as COVID-19)</li>
+<li><strong>Social Science:</strong> Any dataset involving human subjects (may include awards awarded by ASSP and topics such as COVID-19)</li>
 <li><strong>Archaeology:</strong> archaeological site location information, which is protected from public access by law</li>
-<li><strong>Biology:</strong> protected species coordinates</li>
+<li><strong>Biology:</strong> protected species location coordinates</li>
 </ul>
-<p>If any of the above applied to the dataset, please let the rest of the team know before proceeding.</p>
 </div>
 <div id="data-citations" class="section level4" number="9.2.0.2">
 <h4><span class="header-section-number">9.2.0.2</span> Data citations</h4>
