--- a/training/index.html
+++ b/training/index.html
@@ -24,7 +24,7 @@
 <meta name="author" content="Jesse Goldstein, Dominic Mullen, Jeanette Clark, Irene Steves, Mitchell Maier, Bryce Mecum, Peter Slaughter, Emily O’Dean, Jasmine Lai" />
 
 
-<meta name="date" content="2021-12-16" />
+<meta name="date" content="2021-12-28" />
 
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="apple-mobile-web-app-capable" content="yes" />
@@ -218,26 +218,28 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <ul>
 <li class="chapter" data-level="4.7.1" data-path="editing-eml.html"><a href="editing-eml.html#how-annotations-are-used"><i class="fa fa-check"></i><b>4.7.1</b> How annotations are used</a></li>
 <li class="chapter" data-level="4.7.2" data-path="editing-eml.html"><a href="editing-eml.html#how-to-add-an-annotation"><i class="fa fa-check"></i><b>4.7.2</b> How to add an annotation</a></li>
+<li class="chapter" data-level="4.7.3" data-path="editing-eml.html"><a href="editing-eml.html#annotating-sensitive-data"><i class="fa fa-check"></i><b>4.7.3</b> Annotating sensitive data</a></li>
 </ul></li>
 <li class="chapter" data-level="4.8" data-path="editing-eml.html"><a href="editing-eml.html#exercise-3a"><i class="fa fa-check"></i><b>4.8</b> Exercise 3a</a></li>
-<li class="chapter" data-level="4.9" data-path="editing-eml.html"><a href="editing-eml.html#edit-spatial-data"><i class="fa fa-check"></i><b>4.9</b> Edit spatial data</a>
+<li class="chapter" data-level="4.9" data-path="editing-eml.html"><a href="editing-eml.html#validate-eml-and-update-package"><i class="fa fa-check"></i><b>4.9</b> Validate EML and update package</a></li>
+<li class="chapter" data-level="4.10" data-path="editing-eml.html"><a href="editing-eml.html#exercise-3b"><i class="fa fa-check"></i><b>4.10</b> Exercise 3b</a></li>
+<li class="chapter" data-level="4.11" data-path="editing-eml.html"><a href="editing-eml.html#other-eml-functionality"><i class="fa fa-check"></i><b>4.11</b> Other EML functionality</a></li>
+<li class="chapter" data-level="4.12" data-path="editing-eml.html"><a href="editing-eml.html#edit-spatial-data"><i class="fa fa-check"></i><b>4.12</b> Edit spatial data</a>
 <ul>
-<li class="chapter" data-level="4.9.1" data-path="editing-eml.html"><a href="editing-eml.html#reading-spatial-files"><i class="fa fa-check"></i><b>4.9.1</b> Reading Spatial Files</a></li>
-<li class="chapter" data-level="4.9.2" data-path="editing-eml.html"><a href="editing-eml.html#spatialvector"><i class="fa fa-check"></i><b>4.9.2</b> spatialVector</a></li>
-<li class="chapter" data-level="4.9.3" data-path="editing-eml.html"><a href="editing-eml.html#spatialrasters"><i class="fa fa-check"></i><b>4.9.3</b> spatialRasters</a></li>
+<li class="chapter" data-level="4.12.1" data-path="editing-eml.html"><a href="editing-eml.html#reading-spatial-files"><i class="fa fa-check"></i><b>4.12.1</b> Reading Spatial Files</a></li>
+<li class="chapter" data-level="4.12.2" data-path="editing-eml.html"><a href="editing-eml.html#spatialvector"><i class="fa fa-check"></i><b>4.12.2</b> spatialVector</a></li>
+<li class="chapter" data-level="4.12.3" data-path="editing-eml.html"><a href="editing-eml.html#spatialrasters"><i class="fa fa-check"></i><b>4.12.3</b> spatialRasters</a></li>
 </ul></li>
-<li class="chapter" data-level="4.10" data-path="editing-eml.html"><a href="editing-eml.html#set-coverages"><i class="fa fa-check"></i><b>4.10</b> Set coverages</a>
+<li class="chapter" data-level="4.13" data-path="editing-eml.html"><a href="editing-eml.html#set-coverages"><i class="fa fa-check"></i><b>4.13</b> Set coverages</a>
 <ul>
-<li class="chapter" data-level="4.10.1" data-path="editing-eml.html"><a href="editing-eml.html#set-multiple-coverages"><i class="fa fa-check"></i><b>4.10.1</b> Set multiple coverages</a></li>
-<li class="chapter" data-level="4.10.2" data-path="editing-eml.html"><a href="editing-eml.html#special-coverages"><i class="fa fa-check"></i><b>4.10.2</b> Special coverages</a></li>
+<li class="chapter" data-level="4.13.1" data-path="editing-eml.html"><a href="editing-eml.html#set-multiple-coverages"><i class="fa fa-check"></i><b>4.13.1</b> Set multiple coverages</a></li>
+<li class="chapter" data-level="4.13.2" data-path="editing-eml.html"><a href="editing-eml.html#special-coverages"><i class="fa fa-check"></i><b>4.13.2</b> Special coverages</a></li>
 </ul></li>
-<li class="chapter" data-level="4.11" data-path="editing-eml.html"><a href="editing-eml.html#set-methods"><i class="fa fa-check"></i><b>4.11</b> Set methods</a>
+<li class="chapter" data-level="4.14" data-path="editing-eml.html"><a href="editing-eml.html#set-methods"><i class="fa fa-check"></i><b>4.14</b> Set methods</a>
 <ul>
-<li class="chapter" data-level="4.11.1" data-path="editing-eml.html"><a href="editing-eml.html#adding-sampling-info-to-methods-section"><i class="fa fa-check"></i><b>4.11.1</b> Adding sampling info to methods section</a></li>
+<li class="chapter" data-level="4.14.1" data-path="editing-eml.html"><a href="editing-eml.html#adding-sampling-info-to-methods-section"><i class="fa fa-check"></i><b>4.14.1</b> Adding sampling info to methods section</a></li>
 </ul></li>
-<li class="chapter" data-level="4.12" data-path="editing-eml.html"><a href="editing-eml.html#set-parties"><i class="fa fa-check"></i><b>4.12</b> Set parties</a></li>
-<li class="chapter" data-level="4.13" data-path="editing-eml.html"><a href="editing-eml.html#validate-eml-and-update-package"><i class="fa fa-check"></i><b>4.13</b> Validate EML and update package</a></li>
-<li class="chapter" data-level="4.14" data-path="editing-eml.html"><a href="editing-eml.html#exercise-3b"><i class="fa fa-check"></i><b>4.14</b> Exercise 3b</a></li>
+<li class="chapter" data-level="4.15" data-path="editing-eml.html"><a href="editing-eml.html#set-parties"><i class="fa fa-check"></i><b>4.15</b> Set parties</a></li>
 </ul></li>
 <li class="chapter" data-level="5" data-path="updating-a-data-package.html"><a href="updating-a-data-package.html"><i class="fa fa-check"></i><b>5</b> Updating a data package</a>
 <ul>
@@ -368,7 +370,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="header">
 <h1 class="title">NCEAS Data Team Training</h1>
 <p class="author"><em>Jesse Goldstein, Dominic Mullen, Jeanette Clark, Irene Steves, Mitchell Maier, Bryce Mecum, Peter Slaughter, Emily O’Dean, Jasmine Lai</em></p>
-<p class="date"><em>2021-12-16</em></p>
+<p class="date"><em>2021-12-28</em></p>
 </div>
 <div id="welcome-to-nceas" class="section level1 unnumbered">
 <h1>Welcome to NCEAS!</h1>
