--- a/training/index.html
+++ b/training/index.html
@@ -368,8 +368,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <h2>First day to-dos<a href="index.html#first-day-to-dos" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <ul>
 <li>Get a tour of the office from Ginger</li>
-<li>Fill out required paperwork from Ana (room 325)</li>
-<li>Schedule a headshot with Alex (room 326)</li>
+<li>Fill out required paperwork you received via email</li>
 <li>Set up the remainder of your accounts</li>
 </ul>
 </div>
@@ -388,17 +387,15 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 </ul></li>
 <li><a href="http://nceas.slack.com" target="_blank">NCEAS Slack</a> - get an invite from <a href="http://slack.nceas.ucsb.edu" target="_blank">slack.nceas.ucsb.edu</a>
 <ul>
-<li>Channels to join: #arctica, #arcticbot, #computing, #datateam, #devteam, #social</li>
-<li>Introduce yourself in #datateam and then use that channel to ask Justin or Maggie to make you an administrator on test.arcticdata.io</li>
+<li>Channels to join: #arctica, #arcticbot, #computing, #datateam, #devteam</li>
+<li>Introduce yourself in #datateam</li>
 </ul></li>
 <li>Arctic Data Center Team - after creation of ORCiD and sign-in to both arcticdata.io and test.arcticdata.io, request addition to the admin group from Justin or Maggie in Slack</li>
 <li>GitHub - if you do not have a public GitHub account already, please register for one <a href="https://github.com/join?source=header-home" target="_blank">here</a></li>
 <li>If you are an intern, fill out anticipated quarterly schedule on the intern google calendar shared with you.</li>
-<li><a href="https://timekeeping.ucsb.edu/" target="_blank">Electronic Timekeeping</a> - make sure you can log on to electronic timekeeping
-via your UCSBNetID and password (may not be accessible on the first day, if you continue to have issues please let Ana know). If you are an hourly employee, log your hours for your first day! Under today’s date select ‘Hours Worked’ under the Pay Code column, enter the amount of hours under the Amount column, and finally click the ‘Save’ button in the top right. At the end of every two-week pay period you will also need to click the ‘Approve Timecard’ button in order to submit your timecard.<br />
+<li><a href="https://timekeeping.ucsb.edu/" target="_blank">Electronic Timekeeping</a> - make sure you can log on to electronic timekeeping via your UCSBNetID and password (may not be accessible on the first day, if you continue to have issues please let Ana know). If you are an hourly employee, log your hours for your first day! Under today’s date select ‘Hours Worked’ under the Pay Code column, enter the amount of hours under the Amount column, and finally click the ‘Save’ button in the top right. At the end of every two-week pay period you will also need to click the ‘Approve Timecard’ button in order to submit your timecard.<br />
 </li>
-<li><a href="https://www.ucpath.ucsb.edu/" target="_blank">UCPath</a> - you can set up your paycheck preferences here, including direct deposit and income tax withholding.
-<a href="https://timekeeping.ucsb.edu/sites/default/files/employee_hours_worked_0.pdf" target="_blank">Detailed Instructions</a></li>
+<li><a href="https://www.ucpath.ucsb.edu/" target="_blank">UCPath</a> - you can set up your paycheck preferences here, including direct deposit and income tax withholding. <a href="https://timekeeping.ucsb.edu/sites/default/files/employee_hours_worked_0.pdf" target="_blank">Detailed Instructions</a></li>
 <li>Let Justin or Maggie know what email you would like to use for general NCEAS updates from <a href="mailto:all@nceas.ucsb.edu" class="email">all@nceas.ucsb.edu</a></li>
 </ul>
 </div>
@@ -428,6 +425,7 @@ via your UCSBNetID and password (may not be accessible on the first day, if you 
 <li>Data Science Chats - #data-science-chats</li>
 <li>NCEAS Diversity Team</li>
 <li>NCEAS Book Club - #bookclub</li>
+<li>NCEAS Social - #social</li>
 </ul>
 </div>
 <div id="internship-expectations" class="section level2 unnumbered hasAnchor">
@@ -442,7 +440,7 @@ via your UCSBNetID and password (may not be accessible on the first day, if you 
 </div>
 <div id="citation-information" class="section level2 unnumbered hasAnchor">
 <h2>Citation Information<a href="index.html#citation-information" class="anchor-section" aria-label="Anchor link to header"></a></h2>
-<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img alt="Creative Commons License" style="border-width:0" src="https://i.creativecommons.org/l/by/4.0/88x31.png" /></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
+<p><a rel="license" href="http://creativecommons.org/licenses/by/4.0/"><img src="https://i.creativecommons.org/l/by/4.0/88x31.png" alt="Creative Commons License" style="border-width:0"/></a><br />This work is licensed under a <a rel="license" href="http://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution 4.0 International License</a>.</p>
 <p>Clark, Jeanette, Jesse Goldstein, Dominic Mullen, Irene Steves, Mitchell Maier, Stephanie Freund, Sharis Ochs, Bryce Mecum, Peter Slaughter, Emily O’Dean, Jasmine Lai, Daphne Virlar-Knight. 2022 <em>Training Materials for the Arctic Data Center Curation Team</em>. Arctic Data Center. <a href="doi:10.18739/A20G3GX8W" class="uri">doi:10.18739/A20G3GX8W</a>.</p>
 
 </div>
