--- a/training/introduction-to-open-science.html
+++ b/training/introduction-to-open-science.html
@@ -382,7 +382,7 @@ code span.wa { color: #8f5902; font-weight: bold; font-style: italic; } /* Warni
 <div id="using-dataone" class="section level2 hasAnchor" number="1.3">
 <h2><span class="header-section-number">1.3</span> Using DataONE<a href="introduction-to-open-science.html#using-dataone" class="anchor-section" aria-label="Anchor link to header"></a></h2>
 <p><strong>Data Observation Network for Earth</strong> (DataONE) is a community driven initiative that provides access to data across multiple member repositories, supporting enhanced search and discovery of Earth and environmental data.</p>
-<p>Read more about what DataONE is <a href = 'https://www.dataone.org/about/' target='_blank'>here</a> and about DataONE member node (MN) guidelines <a href = 'https://dataone-operations.readthedocs.io/en/latest/MN/deployment/baseline_implementation_requirements.html' target='_blank'>here</a>. Please feel free to ask Jeanette any questions you have about DataONE.</p>
+<p>Read more about what DataONE is <a href = 'https://www.dataone.org/about/' target='_blank'>here</a> and about DataONE member node (MN) guidelines <a href = 'https://dataone-operations.readthedocs.io/en/latest/MN/deployment/baseline_implementation_requirements.html' target='_blank'>here</a>. Please feel free to ask your supervisor any questions you have about DataONE.</p>
 <p>We will be applying these concepts in the next chapter.</p>
 </div>
 <div id="working-on-a-remote-server" class="section level2 hasAnchor" number="1.4">
@@ -482,8 +482,9 @@ doc_ex &lt;- list(packageId = &quot;id&quot;, system = &quot;system&quot;,
 <ul>
 <li>Click “describe” to the right of the file name in order to add file-specific information. The title and description can be edited in the “Overview” tab, while attributes are defined in the “Attributes” tab.</li>
 </ul></li>
-<li>Submit the dataset and post a message to the #datateam channel with a link to your package.</li>
+<li>Submit the dataset</li>
 </ul></li>
+<li>Post a message to the #datateam Slack channel with a link to your package.</li>
 </ul>
 
 </div>
